src/main/java/com/thoughtworks/qdox/parser/impl/y.output
   0  $accept : CompilationUnit $end

   1  CompilationUnit : PackageDeclaration_opt ImportDeclarations_opt TypeDeclarations_opt
   2                  | ImportDeclarations_opt ModuleDeclaration

   3  $$1 :

   4  ModuleDeclaration : Modifiers_opt MODULE ModuleName $$1 BRACEOPEN ModuleStatements_opt BRACECLOSE

   5  ModuleName : QualifiedIdentifier

   6  ModuleNameList : ModuleName
   7                 | ModuleNameList COMMA ModuleName

   8  ModuleStatement : REQUIRES RequiresModifiers_opt ModuleName SEMI

   9  $$2 :

  10  ModuleStatement : EXPORTS DYNAMIC QualifiedIdentifier $$2 ToDeclaration_opt SEMI

  11  $$3 :

  12  ModuleStatement : EXPORTS QualifiedIdentifier $$3 ToDeclaration_opt SEMI
  13                  | USES Type SEMI
  14                  | PROVIDES Type WITH Type SEMI

  15  ModuleStatements_opt :
  16                       | ModuleStatements_opt ModuleStatement

  17  RequiresModifier : PUBLIC
  18                   | STATIC

  19  RequiresModifiers_opt :
  20                        | RequiresModifiers_opt RequiresModifier

  21  ToDeclaration_opt :
  22                    | TO ModuleNameList

  23  PackageDeclaration : package
  24                     | Annotation

  25  PackageDeclaration_opt :
  26                         | PackageDeclaration_opt PackageDeclaration

  27  $$4 :

  28  package : PACKAGE $$4 QualifiedIdentifier SEMI

  29  ImportDeclaration : SingleTypeImportDeclaration
  30                    | TypeImportOnDemandDeclaration
  31                    | SingleStaticImportDeclaration
  32                    | StaticImportOnDemandDeclaration

  33  ImportDeclarations_opt :
  34                         | ImportDeclarations_opt ImportDeclaration

  35  SingleTypeImportDeclaration : IMPORT QualifiedIdentifier SEMI

  36  TypeImportOnDemandDeclaration : IMPORT QualifiedIdentifier DOT STAR SEMI

  37  SingleStaticImportDeclaration : IMPORT STATIC QualifiedIdentifier SEMI

  38  StaticImportOnDemandDeclaration : IMPORT STATIC QualifiedIdentifier DOT STAR SEMI

  39  TypeDeclaration : ClassDeclaration
  40                  | InterfaceDeclaration
  41                  | SEMI

  42  TypeDeclarations_opt :

  43  $$5 :

  44  TypeDeclarations_opt : TypeDeclarations_opt $$5 TypeDeclaration

  45  ClassDeclaration : NormalClassDeclaration
  46                   | EnumDeclaration

  47  $$6 :

  48  NormalClassDeclaration : Modifiers_opt CLASS IDENTIFIER TypeParameters_opt Superclass_opt Superinterfaces_opt $$6 ClassBody

  49  $$7 :

  50  TypeParameters : LESSTHAN $$7 TypeParameterList GREATERTHAN

  51  TypeParameters_opt :
  52                     | TypeParameters

  53  TypeParameterList : TypeParameter
  54                    | TypeParameterList COMMA TypeParameter

  55  Superclass_opt :
  56                 | EXTENDS ReferenceType

  57  Superinterfaces_opt :
  58                      | IMPLEMENTS TypeList

  59  ClassBody : BRACEOPEN ClassBodyDeclarations_opt BRACECLOSE

  60  ClassBody_opt :
  61                | ClassBody

  62  ClassBodyDeclaration : StaticInitializer
  63                       | ClassMemberDeclaration
  64                       | ConstructorDeclaration

  65  ClassBodyDeclarations_opt :

  66  $$8 :

  67  ClassBodyDeclarations_opt : ClassBodyDeclarations_opt $$8 ClassBodyDeclaration

  68  ClassMemberDeclaration : FieldDeclaration
  69                         | MethodDeclaration
  70                         | ClassDeclaration
  71                         | InterfaceDeclaration
  72                         | SEMI

  73  $$9 :

  74  FieldDeclaration : Modifiers_opt Type VariableDeclaratorId $$9 extrafields SEMI

  75  extrafields :

  76  $$10 :

  77  extrafields : extrafields COMMA $$10 VariableDeclaratorId

  78  VariableDeclaratorId : IDENTIFIER Dims_opt

  79  MethodDeclaration : Modifiers_opt MethodHeader MethodBody

  80  VariableInitializer : ArrayInitializer
  81                      | Expression

  82  $$11 :

  83  MethodHeader : TypeParameters Type IDENTIFIER $$11 PARENOPEN FormalParameterList_opt PARENCLOSE Dims_opt Throws_opt

  84  $$12 :

  85  MethodHeader : Type IDENTIFIER $$12 PARENOPEN FormalParameterList_opt PARENCLOSE Dims_opt Throws_opt

  86  FormalParameterList : FormalParameters COMMA LastFormalParameter
  87                      | LastFormalParameter

  88  FormalParameterList_opt :
  89                          | FormalParameterList

  90  FormalParameters : FormalParameter
  91                   | FormalParameters COMMA FormalParameter

  92  FormalParameter : Modifiers_opt Type VariableDeclaratorId

  93  LastFormalParameter : Modifiers_opt Type DOTDOTDOT VariableDeclaratorId
  94                      | FormalParameter

  95  Throws_opt :
  96             | THROWS ExceptionTypeList

  97  ExceptionTypeList : ClassOrInterfaceType
  98                    | ExceptionTypeList COMMA ClassOrInterfaceType

  99  MethodBody : CODEBLOCK
 100             | SEMI

 101  StaticInitializer : Modifiers_opt CODEBLOCK

 102  $$13 :

 103  ConstructorDeclaration : Modifiers_opt IDENTIFIER $$13 PARENOPEN FormalParameterList_opt PARENCLOSE Throws_opt MethodBody

 104  $$14 :

 105  ConstructorDeclaration : Modifiers_opt TypeParameters IDENTIFIER $$14 PARENOPEN FormalParameterList_opt PARENCLOSE Throws_opt CODEBLOCK

 106  $$15 :

 107  EnumDeclaration : Modifiers_opt ENUM IDENTIFIER Superinterfaces_opt $$15 EnumBody

 108  EnumBody : BRACEOPEN EnumConstants_opt EnumBodyDeclarations_opt BRACECLOSE

 109  EnumConstants_opt :
 110                    | EnumConstants_opt COMMA
 111                    | EnumConstants_opt EnumConstant

 112  $$16 :

 113  EnumConstant : Annotations_opt IDENTIFIER $$16 Arguments_opt ClassBody_opt

 114  EnumBodyDeclarations_opt :
 115                           | SEMI ClassBodyDeclarations_opt

 116  InterfaceDeclaration : NormalInterfaceDeclaration
 117                       | AnnotationTypeDeclaration

 118  $$17 :

 119  NormalInterfaceDeclaration : Modifiers_opt INTERFACE IDENTIFIER TypeParameters_opt ExtendsInterfaces_opt $$17 ClassBody

 120  ExtendsInterfaces : EXTENDS TypeList

 121  ExtendsInterfaces_opt :
 122                        | ExtendsInterfaces

 123  $$18 :

 124  AnnotationTypeDeclaration : Modifiers_opt ANNOINTERFACE IDENTIFIER $$18 ClassBody

 125  $$19 :

 126  Annotation : AT QualifiedIdentifier $$19 _AnnotationParens_opt

 127  ElementValuePairList : ElementValuePair
 128                       | ElementValuePairList COMMA ElementValuePair

 129  ElementValuePair : IDENTIFIER EQUALS ElementValue

 130  ElementValue : ConditionalExpression
 131               | Annotation
 132               | ElementValueArrayInitializer

 133  $$20 :

 134  ElementValueArrayInitializer : $$20 BRACEOPEN ElementValues_opt BRACECLOSE

 135  AnnotationElement_opt :
 136                        | ElementValuePairList
 137                        | ElementValue

 138  ElementValues_opt :
 139                    | ElementValues_opt ElementValue
 140                    | ElementValues_opt COMMA

 141  _AnnotationParens_opt :
 142                        | PARENOPEN AnnotationElement_opt PARENCLOSE

 143  Annotations_opt :
 144                  | Annotations_opt Annotation

 145  ArrayInitializer : BRACEOPEN VariableInitializerList_opt BRACECLOSE

 146  VariableInitializerList : VariableInitializerList VariableInitializer
 147                          | VariableInitializerList COMMA

 148  VariableInitializerList_opt :
 149                              | VariableInitializerList

 150  Primary : PrimaryNoNewArray
 151          | ArrayCreationExpression

 152  PrimaryNoNewArray : Literal
 153                    | PrimitiveType Dims_opt DOT CLASS
 154                    | PARENOPEN Expression PARENCLOSE
 155                    | ClassInstanceCreationExpression
 156                    | QualifiedIdentifier DOT CLASS
 157                    | QualifiedIdentifier Dims DOT CLASS
 158                    | QualifiedIdentifier
 159                    | MethodInvocation

 160  ClassInstanceCreationExpression : NEW TypeArguments_opt IDENTIFIER TypeArgumentsOrDiamond_opt PARENOPEN ArgumentList_opt PARENCLOSE ClassBody_opt
 161                                  | NEW IDENTIFIER TypeArgumentsOrDiamond_opt PARENOPEN ArgumentList_opt PARENCLOSE ClassBody_opt

 162  TypeArgumentsOrDiamond : TypeArguments
 163                         | LESSTHAN GREATERTHAN

 164  TypeArgumentsOrDiamond_opt :
 165                             | TypeArgumentsOrDiamond

 166  MethodInvocation : IDENTIFIER PARENOPEN ArgumentList_opt PARENCLOSE
 167                   | SUPER DOT TypeParameters_opt IDENTIFIER PARENOPEN ArgumentList_opt PARENCLOSE
 168                   | QualifiedIdentifier DOT SUPER DOT TypeParameters_opt IDENTIFIER PARENOPEN ArgumentList_opt PARENCLOSE
 169                   | QualifiedIdentifier DOT TypeParameters_opt IDENTIFIER PARENOPEN ArgumentList_opt PARENCLOSE

 170  ArgumentList : Expression
 171               | ArgumentList COMMA Expression

 172  ArgumentList_opt :
 173                   | ArgumentList

 174  ArrayCreationExpression : NEW PrimitiveType DimExprs Dims_opt
 175                          | NEW ClassOrInterfaceType DimExprs Dims_opt
 176                          | NEW PrimitiveType Dims ArrayInitializer
 177                          | NEW ClassOrInterfaceType Dims ArrayInitializer

 178  DimExprs : DimExpr
 179           | DimExprs DimExpr

 180  DimExpr : SQUAREOPEN Expression SQUARECLOSE

 181  Expression : AssignmentExpression

 182  AssignmentExpression : ConditionalExpression
 183                       | Assignment

 184  Assignment : LeftHandSide AssignmentOperator Expression

 185  LeftHandSide : QualifiedIdentifier

 186  AssignmentOperator : EQUALS
 187                     | STAREQUALS
 188                     | SLASHEQUALS
 189                     | PERCENTEQUALS
 190                     | PLUSEQUALS
 191                     | MINUSEQUALS
 192                     | LESSTHAN2EQUALS
 193                     | GREATERTHAN2EQUALS
 194                     | GREATERTHAN3EQUALS
 195                     | AMPERSANDEQUALS
 196                     | CIRCUMFLEXEQUALS
 197                     | VERTLINEEQUALS

 198  ConditionalExpression : ConditionalOrExpression
 199                        | ConditionalOrExpression QUERY Expression COLON ConditionalExpression

 200  ConditionalOrExpression : ConditionalAndExpression
 201                          | ConditionalOrExpression VERTLINE2 ConditionalAndExpression

 202  ConditionalAndExpression : InclusiveOrExpression
 203                           | ConditionalAndExpression AMPERSAND2 InclusiveOrExpression

 204  InclusiveOrExpression : ExclusiveOrExpression
 205                        | InclusiveOrExpression VERTLINE ExclusiveOrExpression

 206  ExclusiveOrExpression : AndExpression
 207                        | ExclusiveOrExpression CIRCUMFLEX AndExpression

 208  AndExpression : EqualityExpression
 209                | AndExpression AMPERSAND EqualityExpression

 210  EqualityExpression : RelationalExpression
 211                     | EqualityExpression EQUALS2 RelationalExpression
 212                     | EqualityExpression NOTEQUALS RelationalExpression

 213  RelationalExpression : ShiftExpression
 214                       | RelationalExpression LESSTHAN ShiftExpression
 215                       | RelationalExpression GREATERTHAN ShiftExpression
 216                       | RelationalExpression LESSEQUALS ShiftExpression
 217                       | RelationalExpression GREATEREQUALS ShiftExpression

 218  ShiftExpression : AdditiveExpression
 219                  | ShiftExpression LESSTHAN2 AdditiveExpression
 220                  | ShiftExpression GREATERTHAN2 AdditiveExpression
 221                  | ShiftExpression GREATERTHAN3 AdditiveExpression

 222  AdditiveExpression : MultiplicativeExpression
 223                     | AdditiveExpression PLUS MultiplicativeExpression
 224                     | AdditiveExpression MINUS MultiplicativeExpression

 225  MultiplicativeExpression : UnaryExpression
 226                           | MultiplicativeExpression STAR UnaryExpression
 227                           | MultiplicativeExpression SLASH UnaryExpression
 228                           | MultiplicativeExpression PERCENT UnaryExpression

 229  UnaryExpression : PreIncrementExpression
 230                  | PreDecrementExpression
 231                  | PLUS UnaryExpression
 232                  | MINUS UnaryExpression
 233                  | UnaryExpressionNotPlusMinus

 234  PreIncrementExpression : PLUSPLUS UnaryExpression

 235  PreDecrementExpression : MINUSMINUS UnaryExpression

 236  UnaryExpressionNotPlusMinus : PostfixExpression
 237                              | TILDE UnaryExpression
 238                              | EXCLAMATION UnaryExpression
 239                              | CastExpression

 240  PostfixExpression : Primary
 241                    | PostIncrementExpression
 242                    | PostDecrementExpression

 243  PostIncrementExpression : PostfixExpression PLUSPLUS

 244  PostDecrementExpression : PostfixExpression MINUSMINUS

 245  CastExpression : PARENOPEN PrimitiveType Dims_opt PARENCLOSE UnaryExpression
 246                 | PARENOPEN QualifiedIdentifier PARENCLOSE UnaryExpressionNotPlusMinus
 247                 | PARENOPEN QualifiedIdentifier Dims PARENCLOSE UnaryExpressionNotPlusMinus

 248  Type : PrimitiveType
 249       | ReferenceType

 250  ReferenceType : ArrayType
 251                | ClassOrInterfaceType

 252  ArrayType : ClassOrInterfaceType Dims
 253            | PrimitiveType Dims

 254  Dims : SQUAREOPEN SQUARECLOSE
 255       | Dims SQUAREOPEN SQUARECLOSE

 256  Dims_opt :
 257           | Dims

 258  $$21 :

 259  TypeParameter : IDENTIFIER $$21 TypeBound_opt

 260  $$22 :

 261  TypeBound : EXTENDS ClassOrInterfaceType $$22 AdditionalBound_opts

 262  TypeBound_opt :
 263                | TypeBound

 264  AdditionalBound : AMPERSAND ClassOrInterfaceType

 265  AdditionalBound_opts :
 266                       | AdditionalBound AdditionalBound_opts

 267  $$23 :

 268  TypeArguments : LESSTHAN $$23 TypeArgumentList GREATERTHAN

 269  TypeArguments_opt :
 270                    | TypeArguments

 271  TypeArgumentList : TypeArgument
 272                   | TypeArgumentList COMMA TypeArgument

 273  TypeArgument : ReferenceType
 274               | Wildcard

 275  Wildcard : QUERY WildcardBounds
 276           | QUERY

 277  WildcardBounds : EXTENDS ReferenceType
 278                 | SUPER ReferenceType

 279  QualifiedIdentifier : IDENTIFIER
 280                      | QualifiedIdentifier DOT IDENTIFIER

 281  PrimitiveType : BYTE
 282                | SHORT
 283                | CHAR
 284                | INT
 285                | LONG
 286                | FLOAT
 287                | DOUBLE
 288                | BOOLEAN

 289  $$24 :

 290  ClassOrInterfaceType : TypeDeclSpecifier $$24 TypeArguments_opt

 291  TypeDeclSpecifier : QualifiedIdentifier
 292                    | ClassOrInterfaceType DOT IDENTIFIER

 293  TypeList : ReferenceType
 294           | TypeList COMMA ReferenceType

 295  Modifiers_opt :
 296                | Modifiers_opt Modifier

 297  Modifier : Annotation
 298           | PUBLIC
 299           | PROTECTED
 300           | PRIVATE
 301           | STATIC
 302           | FINAL
 303           | ABSTRACT
 304           | NATIVE
 305           | SYNCHRONIZED
 306           | VOLATILE
 307           | TRANSIENT
 308           | STRICTFP
 309           | DEFAULT

 310  Arguments_opt :
 311                | PARENOPEN ArgumentList_opt PARENCLOSE

 312  Literal : INTEGER_LITERAL
 313          | FLOAT_LITERAL
 314          | CHAR_LITERAL
 315          | STRING_LITERAL
 316          | BOOLEAN_LITERAL

0: reduce/reduce conflict (reduce 25, reduce 33) on IMPORT
0: reduce/reduce conflict (reduce 25, reduce 33) on PUBLIC
0: reduce/reduce conflict (reduce 25, reduce 33) on PROTECTED
0: reduce/reduce conflict (reduce 25, reduce 33) on PRIVATE
0: reduce/reduce conflict (reduce 25, reduce 33) on STATIC
0: reduce/reduce conflict (reduce 25, reduce 33) on FINAL
0: reduce/reduce conflict (reduce 25, reduce 33) on ABSTRACT
0: reduce/reduce conflict (reduce 25, reduce 33) on NATIVE
0: reduce/reduce conflict (reduce 25, reduce 33) on STRICTFP
0: reduce/reduce conflict (reduce 25, reduce 33) on SYNCHRONIZED
0: reduce/reduce conflict (reduce 25, reduce 33) on TRANSIENT
0: reduce/reduce conflict (reduce 25, reduce 33) on VOLATILE
0: reduce/reduce conflict (reduce 25, reduce 33) on DEFAULT
0: reduce/reduce conflict (reduce 25, reduce 33) on AT
state 0
	$accept : . CompilationUnit $end  (0)
	PackageDeclaration_opt : .  (25)
	ImportDeclarations_opt : .  (33)

	$end  reduce 25
	SEMI  reduce 25
	PACKAGE  reduce 25
	IMPORT  reduce 25
	PUBLIC  reduce 25
	PROTECTED  reduce 25
	PRIVATE  reduce 25
	STATIC  reduce 25
	FINAL  reduce 25
	ABSTRACT  reduce 25
	NATIVE  reduce 25
	STRICTFP  reduce 25
	SYNCHRONIZED  reduce 25
	TRANSIENT  reduce 25
	VOLATILE  reduce 25
	DEFAULT  reduce 25
	MODULE  reduce 33
	CLASS  reduce 25
	INTERFACE  reduce 25
	ENUM  reduce 25
	ANNOINTERFACE  reduce 25
	AT  reduce 25

	CompilationUnit  goto 1
	PackageDeclaration_opt  goto 2
	ImportDeclarations_opt  goto 3


state 1
	$accept : CompilationUnit . $end  (0)

	$end  accept


2: shift/reduce conflict (shift 5, reduce 33) on AT
state 2
	CompilationUnit : PackageDeclaration_opt . ImportDeclarations_opt TypeDeclarations_opt  (1)
	PackageDeclaration_opt : PackageDeclaration_opt . PackageDeclaration  (26)
	ImportDeclarations_opt : .  (33)

	PACKAGE  shift 4
	AT  shift 5
	$end  reduce 33
	SEMI  reduce 33
	IMPORT  reduce 33
	PUBLIC  reduce 33
	PROTECTED  reduce 33
	PRIVATE  reduce 33
	STATIC  reduce 33
	FINAL  reduce 33
	ABSTRACT  reduce 33
	NATIVE  reduce 33
	STRICTFP  reduce 33
	SYNCHRONIZED  reduce 33
	TRANSIENT  reduce 33
	VOLATILE  reduce 33
	DEFAULT  reduce 33
	CLASS  reduce 33
	INTERFACE  reduce 33
	ENUM  reduce 33
	ANNOINTERFACE  reduce 33

	Annotation  goto 6
	ImportDeclarations_opt  goto 7
	PackageDeclaration  goto 8
	package  goto 9


state 3
	CompilationUnit : ImportDeclarations_opt . ModuleDeclaration  (2)
	ImportDeclarations_opt : ImportDeclarations_opt . ImportDeclaration  (34)
	Modifiers_opt : .  (295)

	IMPORT  shift 10
	PUBLIC  reduce 295
	PROTECTED  reduce 295
	PRIVATE  reduce 295
	STATIC  reduce 295
	FINAL  reduce 295
	ABSTRACT  reduce 295
	NATIVE  reduce 295
	STRICTFP  reduce 295
	SYNCHRONIZED  reduce 295
	TRANSIENT  reduce 295
	VOLATILE  reduce 295
	DEFAULT  reduce 295
	MODULE  reduce 295
	AT  reduce 295

	ModuleDeclaration  goto 11
	Modifiers_opt  goto 12
	ImportDeclaration  goto 13
	SingleTypeImportDeclaration  goto 14
	TypeImportOnDemandDeclaration  goto 15
	SingleStaticImportDeclaration  goto 16
	StaticImportOnDemandDeclaration  goto 17


state 4
	package : PACKAGE . $$4 QualifiedIdentifier SEMI  (28)
	$$4 : .  (27)

	.  reduce 27

	$$4  goto 18


state 5
	Annotation : AT . QualifiedIdentifier $$19 _AnnotationParens_opt  (126)

	IDENTIFIER  shift 19
	.  error

	QualifiedIdentifier  goto 20


state 6
	PackageDeclaration : Annotation .  (24)

	.  reduce 24


state 7
	CompilationUnit : PackageDeclaration_opt ImportDeclarations_opt . TypeDeclarations_opt  (1)
	ImportDeclarations_opt : ImportDeclarations_opt . ImportDeclaration  (34)
	TypeDeclarations_opt : .  (42)

	IMPORT  shift 10
	$end  reduce 42
	SEMI  reduce 42
	PUBLIC  reduce 42
	PROTECTED  reduce 42
	PRIVATE  reduce 42
	STATIC  reduce 42
	FINAL  reduce 42
	ABSTRACT  reduce 42
	NATIVE  reduce 42
	STRICTFP  reduce 42
	SYNCHRONIZED  reduce 42
	TRANSIENT  reduce 42
	VOLATILE  reduce 42
	DEFAULT  reduce 42
	CLASS  reduce 42
	INTERFACE  reduce 42
	ENUM  reduce 42
	ANNOINTERFACE  reduce 42
	AT  reduce 42

	TypeDeclarations_opt  goto 21
	ImportDeclaration  goto 13
	SingleTypeImportDeclaration  goto 14
	TypeImportOnDemandDeclaration  goto 15
	SingleStaticImportDeclaration  goto 16
	StaticImportOnDemandDeclaration  goto 17


state 8
	PackageDeclaration_opt : PackageDeclaration_opt PackageDeclaration .  (26)

	.  reduce 26


state 9
	PackageDeclaration : package .  (23)

	.  reduce 23


state 10
	SingleTypeImportDeclaration : IMPORT . QualifiedIdentifier SEMI  (35)
	TypeImportOnDemandDeclaration : IMPORT . QualifiedIdentifier DOT STAR SEMI  (36)
	SingleStaticImportDeclaration : IMPORT . STATIC QualifiedIdentifier SEMI  (37)
	StaticImportOnDemandDeclaration : IMPORT . STATIC QualifiedIdentifier DOT STAR SEMI  (38)

	STATIC  shift 22
	IDENTIFIER  shift 19
	.  error

	QualifiedIdentifier  goto 23


state 11
	CompilationUnit : ImportDeclarations_opt ModuleDeclaration .  (2)

	.  reduce 2


state 12
	ModuleDeclaration : Modifiers_opt . MODULE ModuleName $$1 BRACEOPEN ModuleStatements_opt BRACECLOSE  (4)
	Modifiers_opt : Modifiers_opt . Modifier  (296)

	PUBLIC  shift 24
	PROTECTED  shift 25
	PRIVATE  shift 26
	STATIC  shift 27
	FINAL  shift 28
	ABSTRACT  shift 29
	NATIVE  shift 30
	STRICTFP  shift 31
	SYNCHRONIZED  shift 32
	TRANSIENT  shift 33
	VOLATILE  shift 34
	DEFAULT  shift 35
	MODULE  shift 36
	AT  shift 5
	.  error

	Annotation  goto 37
	Modifier  goto 38


state 13
	ImportDeclarations_opt : ImportDeclarations_opt ImportDeclaration .  (34)

	.  reduce 34


state 14
	ImportDeclaration : SingleTypeImportDeclaration .  (29)

	.  reduce 29


state 15
	ImportDeclaration : TypeImportOnDemandDeclaration .  (30)

	.  reduce 30


state 16
	ImportDeclaration : SingleStaticImportDeclaration .  (31)

	.  reduce 31


state 17
	ImportDeclaration : StaticImportOnDemandDeclaration .  (32)

	.  reduce 32


state 18
	package : PACKAGE $$4 . QualifiedIdentifier SEMI  (28)

	IDENTIFIER  shift 19
	.  error

	QualifiedIdentifier  goto 39


state 19
	QualifiedIdentifier : IDENTIFIER .  (279)

	.  reduce 279


state 20
	Annotation : AT QualifiedIdentifier . $$19 _AnnotationParens_opt  (126)
	QualifiedIdentifier : QualifiedIdentifier . DOT IDENTIFIER  (280)
	$$19 : .  (125)

	DOT  shift 40
	$end  reduce 125
	SEMI  reduce 125
	COMMA  reduce 125
	PLUS  reduce 125
	MINUS  reduce 125
	PACKAGE  reduce 125
	IMPORT  reduce 125
	PUBLIC  reduce 125
	PROTECTED  reduce 125
	PRIVATE  reduce 125
	STATIC  reduce 125
	FINAL  reduce 125
	ABSTRACT  reduce 125
	NATIVE  reduce 125
	STRICTFP  reduce 125
	SYNCHRONIZED  reduce 125
	TRANSIENT  reduce 125
	VOLATILE  reduce 125
	DEFAULT  reduce 125
	MODULE  reduce 125
	CLASS  reduce 125
	INTERFACE  reduce 125
	ENUM  reduce 125
	ANNOINTERFACE  reduce 125
	SUPER  reduce 125
	NEW  reduce 125
	BRACEOPEN  reduce 125
	BRACECLOSE  reduce 125
	PARENOPEN  reduce 125
	PARENCLOSE  reduce 125
	LESSTHAN  reduce 125
	EXCLAMATION  reduce 125
	TILDE  reduce 125
	AT  reduce 125
	CODEBLOCK  reduce 125
	BYTE  reduce 125
	SHORT  reduce 125
	INT  reduce 125
	LONG  reduce 125
	CHAR  reduce 125
	FLOAT  reduce 125
	DOUBLE  reduce 125
	BOOLEAN  reduce 125
	IDENTIFIER  reduce 125
	BOOLEAN_LITERAL  reduce 125
	INTEGER_LITERAL  reduce 125
	FLOAT_LITERAL  reduce 125
	CHAR_LITERAL  reduce 125
	STRING_LITERAL  reduce 125
	PLUSPLUS  reduce 125
	MINUSMINUS  reduce 125

	$$19  goto 41


state 21
	CompilationUnit : PackageDeclaration_opt ImportDeclarations_opt TypeDeclarations_opt .  (1)
	TypeDeclarations_opt : TypeDeclarations_opt . $$5 TypeDeclaration  (44)
	$$5 : .  (43)

	$end  reduce 1
	SEMI  reduce 43
	PUBLIC  reduce 43
	PROTECTED  reduce 43
	PRIVATE  reduce 43
	STATIC  reduce 43
	FINAL  reduce 43
	ABSTRACT  reduce 43
	NATIVE  reduce 43
	STRICTFP  reduce 43
	SYNCHRONIZED  reduce 43
	TRANSIENT  reduce 43
	VOLATILE  reduce 43
	DEFAULT  reduce 43
	CLASS  reduce 43
	INTERFACE  reduce 43
	ENUM  reduce 43
	ANNOINTERFACE  reduce 43
	AT  reduce 43

	$$5  goto 42


state 22
	SingleStaticImportDeclaration : IMPORT STATIC . QualifiedIdentifier SEMI  (37)
	StaticImportOnDemandDeclaration : IMPORT STATIC . QualifiedIdentifier DOT STAR SEMI  (38)

	IDENTIFIER  shift 19
	.  error

	QualifiedIdentifier  goto 43


state 23
	SingleTypeImportDeclaration : IMPORT QualifiedIdentifier . SEMI  (35)
	TypeImportOnDemandDeclaration : IMPORT QualifiedIdentifier . DOT STAR SEMI  (36)
	QualifiedIdentifier : QualifiedIdentifier . DOT IDENTIFIER  (280)

	SEMI  shift 44
	DOT  shift 45
	.  error


state 24
	Modifier : PUBLIC .  (298)

	.  reduce 298


state 25
	Modifier : PROTECTED .  (299)

	.  reduce 299


state 26
	Modifier : PRIVATE .  (300)

	.  reduce 300


state 27
	Modifier : STATIC .  (301)

	.  reduce 301


state 28
	Modifier : FINAL .  (302)

	.  reduce 302


state 29
	Modifier : ABSTRACT .  (303)

	.  reduce 303


state 30
	Modifier : NATIVE .  (304)

	.  reduce 304


state 31
	Modifier : STRICTFP .  (308)

	.  reduce 308


state 32
	Modifier : SYNCHRONIZED .  (305)

	.  reduce 305


state 33
	Modifier : TRANSIENT .  (307)

	.  reduce 307


state 34
	Modifier : VOLATILE .  (306)

	.  reduce 306


state 35
	Modifier : DEFAULT .  (309)

	.  reduce 309


state 36
	ModuleDeclaration : Modifiers_opt MODULE . ModuleName $$1 BRACEOPEN ModuleStatements_opt BRACECLOSE  (4)

	IDENTIFIER  shift 19
	.  error

	QualifiedIdentifier  goto 46
	ModuleName  goto 47


state 37
	Modifier : Annotation .  (297)

	.  reduce 297


state 38
	Modifiers_opt : Modifiers_opt Modifier .  (296)

	.  reduce 296


state 39
	package : PACKAGE $$4 QualifiedIdentifier . SEMI  (28)
	QualifiedIdentifier : QualifiedIdentifier . DOT IDENTIFIER  (280)

	SEMI  shift 48
	DOT  shift 40
	.  error


state 40
	QualifiedIdentifier : QualifiedIdentifier DOT . IDENTIFIER  (280)

	IDENTIFIER  shift 49
	.  error


41: shift/reduce conflict (shift 50, reduce 141) on PARENOPEN
state 41
	Annotation : AT QualifiedIdentifier $$19 . _AnnotationParens_opt  (126)
	_AnnotationParens_opt : .  (141)

	PARENOPEN  shift 50
	$end  reduce 141
	SEMI  reduce 141
	COMMA  reduce 141
	PLUS  reduce 141
	MINUS  reduce 141
	PACKAGE  reduce 141
	IMPORT  reduce 141
	PUBLIC  reduce 141
	PROTECTED  reduce 141
	PRIVATE  reduce 141
	STATIC  reduce 141
	FINAL  reduce 141
	ABSTRACT  reduce 141
	NATIVE  reduce 141
	STRICTFP  reduce 141
	SYNCHRONIZED  reduce 141
	TRANSIENT  reduce 141
	VOLATILE  reduce 141
	DEFAULT  reduce 141
	MODULE  reduce 141
	CLASS  reduce 141
	INTERFACE  reduce 141
	ENUM  reduce 141
	ANNOINTERFACE  reduce 141
	SUPER  reduce 141
	NEW  reduce 141
	BRACEOPEN  reduce 141
	BRACECLOSE  reduce 141
	PARENCLOSE  reduce 141
	LESSTHAN  reduce 141
	EXCLAMATION  reduce 141
	TILDE  reduce 141
	AT  reduce 141
	CODEBLOCK  reduce 141
	BYTE  reduce 141
	SHORT  reduce 141
	INT  reduce 141
	LONG  reduce 141
	CHAR  reduce 141
	FLOAT  reduce 141
	DOUBLE  reduce 141
	BOOLEAN  reduce 141
	IDENTIFIER  reduce 141
	BOOLEAN_LITERAL  reduce 141
	INTEGER_LITERAL  reduce 141
	FLOAT_LITERAL  reduce 141
	CHAR_LITERAL  reduce 141
	STRING_LITERAL  reduce 141
	PLUSPLUS  reduce 141
	MINUSMINUS  reduce 141

	_AnnotationParens_opt  goto 51


state 42
	TypeDeclarations_opt : TypeDeclarations_opt $$5 . TypeDeclaration  (44)
	Modifiers_opt : .  (295)
